# digitizerGPT

./: LICENSE  README.md
04_tilt/: CMakeLists.txt  main.cpp
05_correction/: CMakeLists.txt  main.cpp
bind/: CMakeLists.txt  main.cpp
crop/: CMakeLists.txt
deshadow/: CMakeLists.txt  main.cpp
deshadow_middle/: CMakeLists.txt  main.cpp
move/: CMakeLists.txt  main.cpp
rotate/: CMakeLists.txt  main.cpp
split/: CMakeLists.txt  main.cpp
